--- a/backends/gem5/Makefile
+++ b/backends/gem5/Makefile
@@ -14,8 +14,8 @@ ABI         := lp64
 
 # ==== Percorsi ====
 KERNEL_DIR  := ../../kernel/$(KERNEL)
-COMMON_DIR  := ../../common
-DATA_DIR    := ../../data
+COMMON_DIR  := ../../kernel/common
+DATA_DIR    := ../../data/$(KERNEL)
 
 # ==== File ====
 TARGET      := $(KERNEL_DIR)/main.elf
@@ -25,7 +25,7 @@ SRCS        := $(wildcard $(KERNEL_DIR)/*.c) \
                $(DATA_DIR)/dataset.c
 
 # ==== Flag ====
-CFLAGS      := -O2 -march=$(MARCH) -mabi=$(ABI) -DGEM5SIM \
+CFLAGS      := -O2 -march=$(MARCH) -mabi=$(ABI) -DSPIKEGEM \
                -I$(KERNEL_DIR)/inc -I$(COMMON_DIR) -I$(DATA_DIR)
 
 .PHONY: build run clean
