--- a/backends/ara_2_lanes/Makefile
+++ b/backends/ara_2_lanes/Makefile
@@ -9,32 +9,32 @@ SIMPLYV_DIR := $(SELF_DIR)/Simply-V
 EXAMPLES_DIR := $(SIMPLYV_DIR)/sw/SoC/examples
 HW_DIR := $(SIMPLYV_DIR)/hw/xilinx
 
+.PHONY: prepare_simplyv build openocd_run run
 
-ifeq ($(findstring _32,$(KERNEL)),_32)
-    COMMON_SUFFIX := 32
-else
-    COMMON_SUFFIX := 8
-endif
-
-
-.PHONY: build run
-
+prepare_simplyv:
+	@echo "[ARA2] Preparing Simply-V environment..."
+	@cd $(SIMPLYV_DIR) && git apply ara_config.patch || true
+	@make -C $(SIMPLYV_DIR) hw
+	@make -C $(HW_DIR) program_bitstream
+	@echo "[ARA2] Simply-V ready."
 
 build:
-	@echo "[ARA2] Building example in Simply-V/sw/SoC/examples/$(KERNEL)..."
-	make -C $(EXAMPLES_DIR)/$(KERNEL) clean all
+	@echo "[ARA2] Building example $(KERNEL)..."
+	@make -C $(SIMPLYV_DIR) sw
+	@make -C $(EXAMPLES_DIR)/$(KERNEL) clean all
+	@echo "[ARA2] Build complete."
 
+openocd_run:
+	@make -C $(HW_DIR) openocd_run
 
 run:
 	@if [ -z "$(KERNEL)" ]; then \
 		echo "[ERROR] Please specify KERNEL=name"; \
 		exit 1; \
 	fi
-
 	@if [ ! -d "$(EXAMPLES_DIR)/$(KERNEL)" ]; then \
-		echo "[ERROR] Example not built. First run: make build KERNEL=$(KERNEL)"; \
+		echo "[ERROR] Example not built. Run: make build KERNEL=$(KERNEL)"; \
 		exit 1; \
 	fi
-
-	@echo "[ARA2] Running example $(KERNEL) with hw/xilinx..."
-	make -C $(HW_DIR) gdb_run EXAMPLE=$(KERNEL)
+	@echo "[ARA2] Running example $(KERNEL)..."
+	@make -C $(HW_DIR) gdb_run EXAMPLE=$(KERNEL)
